--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,21 +14,29 @@
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description>
-        something rlly usefullsomething rlly usefullsomething rlly usefullsomething rlly usefullsomething rlly usefull
+        CommitScheduler is a plugin that allows you to schedule your commits in advance. You can schedule your commits to be made in specific days. This plugin is useful for people who want to commit their code at a specific time, but they are not available to do it manually.
     </description>
 
     <!-- Product and plugin compatibility requirements.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
     <depends>com.intellij.modules.platform</depends>
+<!--    <depends>com.intellij.modules.vcs</depends>-->
+    <depends>Git4Idea</depends>
 
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
         <projectService serviceImplementation="com.commitscheduler.commitscheduler6.ConfigPersistangeManager"/>
+        <postStartupActivity implementation="com.commitscheduler.commitscheduler6.GitListenerStartup"/>
     </extensions>
+
     <actions>
-        <action id="com.commitscheduler.commitscheduler6.SimpleAction" class="com.commitscheduler.commitscheduler6.SimpleAction" text="Show Simple Message">
+        <action id="com.commitscheduler.commitscheduler6.Frontend.SimpleAction" class="com.commitscheduler.commitscheduler6.Frontend.SimpleAction" text="Commit Scheduler">
             <add-to-group group-id="VcsGroups" anchor="last"/>
         </action>
     </actions>
+
+    <applicationListeners>
+        <listener class="com.commitscheduler.commitscheduler6.CustomProjectManagerListener" topic="com.intellij.openapi.project.ProjectManagerListener"/>
+    </applicationListeners>
 </idea-plugin>
